--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ a {
 /* MAIN */
 .main-container {
     width: 1348px;
-    height: 396px;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
     background: #EDF7FA;
@@ -200,6 +200,7 @@ a {
     border-radius: 5px;
     margin-left: 148px;
     background-color: #fff;
+    margin-bottom: 20px;
 }
 
 .main-hero-making {
