--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,6 @@ main {
 }
 
 img {
-    display: flex;
     object-fit: cover;
 }
 
@@ -239,4 +238,90 @@ a {
     margin-left: 23px;
     font-family: 'Hebbo', sans-serif;
     font-size: 16px;
+}
+
+
+/* SECTION */
+.section-container {
+    font-family: 'Hebbo', sans-serif;
+    width: 1348px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
+
+.section-header {
+    width: 152px;
+    height: 60px;
+    font-size: 22px;
+    font-weight: 400;
+    margin-left: 148px;
+    line-height: 60px;
+    color: #21243D;
+}
+
+.section-hero {
+    display: flex;
+}
+
+.section-rectangle {
+    margin-left: 148px;
+    margin-top: 15px;
+}
+
+
+.section-hero-text {
+    width: 365px;
+    height: 44px;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 44px;
+    margin-left: 18px;
+}
+
+.section-hero-dashborad {
+    display: flex;
+}
+
+.section-date {
+    width: 62px;
+    height: 25px;
+    font-size: 18px;
+    line-height: 1.3;
+    margin-top: 20px;
+    margin-left: 18px;
+    border: 1px solid;
+    text-align: center;
+    align-items: center;
+    border-radius: 16px;
+    background: #142850;
+    color: #fff;
+}
+
+.section-dashboard {
+    width: 374px;
+    height: 34px;
+    margin-top: 24px;
+    margin-left: 26px;
+    color: #8695A4;
+}
+
+.section-footer {
+    width: 594px;
+    height: 93px;
+    margin-top: 22px;
+    margin-left: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    font-size: 16px;
+} 
+
+.vector-footer {
+    width: 1040px;
+    height: 1px;
+    margin-top: 5px;
+    margin-left: 146px;
+    border: 1px;
+    background: gray;
+    margin-bottom: 20px;
 }
