--- a/css/main.css
+++ b/css/main.css
@@ -325,3 +325,66 @@ a {
     background: gray;
     margin-bottom: 20px;
 }
+
+
+/*HERO BLOG  */
+.blog-container {
+    font-family: 'Hebbo', sans-serif;
+    width: 1152px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.hero-blog {
+    width: 156px;
+    margin-left: 240px;
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 30px;
+    color: #21243D;
+}
+
+.hero-blog-text {
+    width: 682px;
+    height: 33px;
+    margin-top: 55px;
+    margin-left: 240px;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 44px;
+}
+
+.hero-blog-date {
+    display: flex;
+    margin-top: 18px;
+    margin-left: 215px;
+}
+
+.design2 {
+    margin-left: 32px;
+    color: #8695A4;
+}
+
+.hero-blog-footer {
+    width: 682px;
+    height: 43px;
+    margin-top: 18px;
+    font-family: Heebo;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.vector-footer2 {
+    width: 681px;
+    height: 1px;
+    margin-top: 25px;
+    border: 1px;
+    background: gray;
+}
+
+.blog-footer {
+    width: 682px;
+    height: 110px;
+    margin-left: 240px;
+    border: 1px solid #fff;
+}
